fix(log&events): fixed columns-organizer not aligned with other action buttons CFY-3641

--- a/app/styles/_columnsOrganizer.scss
+++ b/app/styles/_columnsOrganizer.scss
@@ -1,19 +1,25 @@
-.columns-dnd-list{
-    width: 250px;
-    padding: 5px;
-    max-height: 500px;
-    overflow-y: auto;
-    cursor: $COSMOUI_CLICKABLE_CURSOR;
+#columns-organizer{
+    display: inline-block;
+    position: relative;
 
-    .dnd-list-item:not(:last-child){
-        margin-bottom:1px;
-    }
+    .columns-dnd-list{
+        width: 250px;
+        padding: 5px;
+        max-height: 500px;
+        overflow-y: auto;
+        cursor: $COSMOUI_CLICKABLE_CURSOR;
 
-    .draggable-icon{
-        position: absolute;
-        right: 0;
-        margin-right: 5px;
-        opacity: 0.5;
-        line-height: 1.45;
+        .dnd-list-item:not(:last-child){
+            margin-bottom:1px;
+        }
+
+        .draggable-icon{
+            position: absolute;
+            right: 0;
+            margin-right: 5px;
+            opacity: 0.5;
+            line-height: 1.45;
+        }
     }
 }
+
